Fix the payment method close button position shift

--- a/src/App.css
+++ b/src/App.css
@@ -154,6 +154,7 @@
 
 .payment.largen {
   cursor: default;
+  position: relative;
   width: 100%;
   height: auto;
   aspect-ratio: 1/1;
